Remove buggy (and useless) z-index

--- a/client/src/components/PlayingCard/PlayingCard.scss
+++ b/client/src/components/PlayingCard/PlayingCard.scss
@@ -19,7 +19,6 @@
     top: -$spacing-regular;
     transform: rotate(4deg);
     bottom: -$spacing-regular;
-    z-index: 1;
 
     &--Left {
       left: $spacing-small;
